2008-07-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	Add keepgoing and move the imports to scopes, this should
	fix buildbot on machines which lacks gnomevfs or gio

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	Added python-twisted-conch and python-iCalendar as Requires and
        BuildRequires.

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/errors.py:
	* flumotion/common/vfs.py:
	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	Remove MissingDependencyError in favor of just ImportError.

2008-07-21  Johan Dahlin  <johan@flumotion.com>

	* data/glade/ondemand-wizard.glade:
	* flumotion/common/Makefile.am:
	* flumotion/common/errors.py:
	* flumotion/common/interfaces.py:
	* flumotion/common/vfs.py:
	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	* flumotion/configure/configure.py:
	* flumotion/manager/worker.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_common_vfs.py:
	* flumotion/ui/Makefile.am:
	* flumotion/ui/fileselector.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/ondemandstep.py:
	* flumotion/worker/medium.py:
	Add a file selector dialog to the on demand step.
	Add a vfs framework with two backends (gnomevfs and gio),
	add tests and documentation. Fixes #1050

2008-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/connections.py:
	* flumotion/common/common.py:
	* flumotion/common/fraction.py:
	  Doc string fixes.

2008-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/debug-marker.glade:
	  Fix string.
	* po/POTFILES.in:
	  Add for translation.
	* po/POTFILES.skip (added):
	  Don't scan i18n.py

2008-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/POTFILES.in:
	  Fix up for file->httpfile rename.

2008-07-18  Johan Dahlin  <johan@gnome.org>

	* configure.ac: